tempfile/auto_impl/tests/compile-fail/mut_self_for_immutable_ref.rs
use auto_impl::auto_impl;


#[auto_impl(&)]
trait Foo {
    fn foo(&mut self);
}


fn main() {}
